# G4EXAMPLE

./: README.md
example/: 0.0253.in  1.33.in  CMakeLists.txt  beam.cc  beam.in  plotHisto.C  vis.mac
example/include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
example/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
